# learning-augmented-last-mile-routing

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/confirmatory_results/: headline_metrics.json  station_summary.csv  test_method_summary.csv  validation_tradeoff.csv
artifacts/data_audit/: route_profile.json
artifacts/research_story/: empirical_pareto_frontier.csv  toy_tradeoff.csv
artifacts/travel_time_experiment/: run_metadata.json  validation_weight_summary.csv
configs/: experiment.json
data/: README.md
docs/: chart_contracts.md  cv_and_interview_notes.md  research_protocol.md
notebooks/: 00_mathematical_formulation_and_tradeoffs.ipynb  01_data_quality_audit.ipynb  02_confirmatory_results.ipynb
report/: report-payload.json  report-shell.html  report.html  source_notes.md
scripts/: build_html_report.py  create_mathematical_notebook.py  create_notebooks.py  create_results_notebook.py  download_data.py  run_geodesic_screen.py  run_pairwise_screen.py  run_travel_time_experiment.py
src/lastmile/: __init__.py  audit.py  baselines.py  cli.py  data.py  experiments.py  geometry.py  metrics.py  model.py  official_score.py  pairwise.py  splits.py  synthetic.py  travel_experiments.py  types.py
tests/: test_experiments.py  test_official_score.py  test_pairwise.py  test_routing.py  test_splits.py  test_travel_experiments.py
